# RxRos

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clean_ws.sh  package.xml
examples/: simple.cpp
include/rxros/: generic_publisher.hpp  helpers.hpp  rxros.hpp
src/: generic_publisher.hpp  main.cpp  rxros.hpp
